
	* fixed disk I/O performance of checking hashes and creating torrents
	* fix race condition in part_file
	* fix part_file open mode compatibility test
	* fixed race condition in random number generator
	* fix race condition in stat_cache (disk storage)
	* improve error handling of failing to change file priority
	  The API for custom storage implementations was altered
	* set the hidden attribute when creating the part file
	* fix tracker announces reporting more data downloaded than the size of the torrent
	* fix recent regression with force_proxy setting

1.1.7 release

	* don't perform DNS lookups for the DHT bootstrap unless DHT is enabled
	* fix issue where setting file/piece priority would stop checking
	* expose post_dht_stats() to python binding
	* fix backwards compatibility to downloads without partfiles
	* improve part-file related error messages
	* fix reporting &redundant= in tracker announces
	* fix tie-break in duplicate peer connection disconnect logic
	* fix issue with SSL tracker connections left in CLOSE_WAIT state
	* defer truncating existing files until the first time we write to them
	* fix issue when receiving a torrent with 0-sized padfiles as magnet link
	* fix issue resuming 1.0.x downloads with a file priority 0
	* fix torrent_status::next_announce
	* fix pad-file scalability issue
	* made coalesce_reads/coalesce_writes settings take effect on linux and windows
	* use unique peer_ids per connection
	* fix iOS build on recent SDK
	* fix tracker connection bind issue for IPv6 trackers
	* fix error handling of some merkle torrents
	* fix error handling of unsupported hard-links

1.1.6 release

	* deprecate save_encryption_settings (they are part of the normal settings)
	* add getters for peer_class_filter and peer_class_type_filter
	* make torrent_handler::set_priority() to use peer_classes
	* fix support for boost-1.66 (requires C++11)
	* fix i2p support
	* fix loading resume data when in seed mode
	* fix part-file creation race condition