@@ -447,6 +447,28 @@ TORRENT_TEST(coalesce_writes)
 	cleanup();
 }
 
+TORRENT_TEST(no_coalesce_reads)
+{
+	using namespace libtorrent;
+	// test allowed fast
+	settings_pack p;
+	p.set_int(settings_pack::read_cache_line_size, 16);
+	p.set_bool(settings_pack::coalesce_reads, false);
+	test_transfer(0, p, false);
+
+	cleanup();
+}
+
+TORRENT_TEST(no_coalesce_writes)
+{
+	using namespace libtorrent;
+	// test allowed fast
+	settings_pack p;
+	p.set_bool(settings_pack::coalesce_writes, false);
+	test_transfer(0, p, false);
+
+	cleanup();
+}
 
 TORRENT_TEST(allocate)
 {
